--- a/Builds/VisualStudio2013/open-ephys.vcxproj
+++ b/Builds/VisualStudio2013/open-ephys.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="..\..\Source\Processors\EventDetector\EventDetector.cpp"/>
     <ClCompile Include="..\..\Source\Processors\EventNode\EventNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\EventNode\EventNodeEditor.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\FileReader\KwikFileSource.cpp"/>
     <ClCompile Include="..\..\Source\Processors\FileReader\FileSource.cpp"/>
     <ClCompile Include="..\..\Source\Processors\FileReader\FileReader.cpp"/>
     <ClCompile Include="..\..\Source\Processors\FileReader\FileReaderEditor.cpp"/>
@@ -1446,6 +1447,7 @@
     <ClInclude Include="..\..\Source\Processors\EventDetector\EventDetector.h"/>
     <ClInclude Include="..\..\Source\Processors\EventNode\EventNode.h"/>
     <ClInclude Include="..\..\Source\Processors\EventNode\EventNodeEditor.h"/>
+    <ClInclude Include="..\..\Source\Processors\FileReader\KwikFileSource.h"/>
     <ClInclude Include="..\..\Source\Processors\FileReader\FileSource.h"/>
     <ClInclude Include="..\..\Source\Processors\FileReader\FileReader.h"/>
     <ClInclude Include="..\..\Source\Processors\FileReader\FileReaderEditor.h"/>
